settings: Extend UI to show and specify expiration time for invitation.
Extending organization settings UI for displaying and
specifying expiration date for invitation links rather
than just using 10 days default.

--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -48,6 +48,12 @@
                         </select>
                     </div>
                 </div>
+                <div class="input-group">
+                    <label for="invite_expires_in_days">{{ _('Link expires in (days)') }}</label>
+                    <div>
+                        <input id="invite_expires_in_days" name="invite_expires_in_days" type="text" />
+                    </div>
+                </div>
                 <div>
                     <label>{{ _('Streams they should join') }}</label>
                     <div id="streams_to_add"></div>
